--- a/css/style.css
+++ b/css/style.css
@@ -535,6 +535,11 @@ button {
     }
 } */
 
+/* @media screen and (max-width: 1000px) {
+    .footer {
+        position: static;
+    }
+} */
 
 @media screen and (max-width: 850px) {
 
