--- a/css/style.css
+++ b/css/style.css
@@ -420,8 +420,8 @@ button {
 
 .grade {
     font-size: 20px;
-    margin-top: 3.5vh;
-    margin-bottom: 2.5vh;
+    margin-top: 3vh;
+    margin-bottom: 2vh;
     margin-left: 1.5vw;
 }
 
@@ -520,6 +520,74 @@ button {
 @keyframes fadeIn {
     0% { opacity:0; }
     100% { opacity:100%; }
+}
+
+.gpa-switch-box {
+    display: block;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    padding-top: 1vh;
+    margin-left: 1vw;
+    margin-top: 1.5vh;
+}
+  
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+  
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+input:checked + .slider {
+    /* background-color: #2196F3; */
+    background-color: var(--helptip2);
+}
+  
+input:focus + .slider {
+    /* box-shadow: 0 0 1px #2196F3; */
+    box-shadow: 0 0 1px var(--helptip2);
+}
+  
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+  
+.slider.round:before {
+    border-radius: 50%;
 }
 
 
